# rust_maze_wasm

./: Cargo.toml  README.md
src/: draw.rs  main.rs  maze.rs
static/: index.html
